# mirage

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
python/: README.md  pyproject.toml
python/mirage/: __init__.py  config.py  sdk.py  types.py  version.py
python/mirage/accessor/: base.py  box.py  databricks_volume.py  dify.py  disk.py  dropbox.py  gdrive.py  gridfs.py  lancedb.py  mem0.py  mongodb.py  onedrive.py  qdrant.py  sharepoint.py  ssh.py
python/mirage/agents/agno/: toolkit.py
python/mirage/agents/claude_agent_sdk/: server.py
python/mirage/agents/langchain/: _convert.py  backend.py
python/mirage/agents/openai_agents/: editor.py  runner.py  sandbox.py
python/mirage/agents/openhands/: terminal.py  workspace.py
python/mirage/agents/pydantic_ai/: _convert.py  backend.py
python/mirage/bridge/: sync.py
python/mirage/cache/: context.py  manager.py  read_through.py
python/mirage/cache/file/: io.py  mixin.py  ram.py  redis.py
python/mirage/cache/index/: __init__.py  config.py  null.py  ram.py  redis.py  store.py
python/mirage/cli/: README.md  client.py  config.py  daemon.py  execute.py  job.py  main.py  output.py  provision.py  session.py  settings.py  workspace.py
python/mirage/commands/: __init__.py  config.py  errors.py  optional.py  resolve.py  safeguard.py
python/mirage/commands/builtin/: constants.py  cut_helper.py  diff_helper.py  file_helper.py  find_eval.py  find_helper.py  find_parse.py  grep_helper.py  (+4 more)
python/mirage/concurrency/: __init__.py  limiter.py
python/mirage/context/: __init__.py  session_context.py
python/mirage/core/: timeutil.py
python/mirage/fuse/: fs.py  mount.py
python/mirage/io/: async_line_iterator.py  cachable_iterator.py  stream.py  sync_bridge.py  types.py
python/mirage/observe/: __init__.py  context.py  disk_store.py  log_entry.py  observer.py  redis_store.py  store.py
python/mirage/ops/: config.py  file.py  open.py  ops.py  os_patch.py  registry.py
python/mirage/provision/: __init__.py  types.py
python/mirage/resource/: base.py  generic.py  registry.py
python/mirage/runtime/: base.py  options.py  table.py  wasm.py
python/mirage/server/: app.py  clone.py  daemon_config.py  env.py  host_validation.py  jobs.py  paths.py  registry.py  summary.py
python/mirage/shell/: arith.py  constants.py  errors.py  helpers.py  job_table.py  node_kind.py  parse.py  types.py  xtrace.py
python/mirage/utils/: dates.py  errors.py  fingerprint.py  fnmatch.py  glob_walk.py  ids.py  key_prefix.py  mode.py  path.py  stream.py
python/mirage/watch/: __init__.py  base.py  constants.py  delta.py  errors.py  source.py  watcher.py
python/mirage/workspace/: __init__.py  dispatcher.py  file_prompt.py  fuse.py  history.py  reconcile.py  route.py  runner.py  types.py  workspace.py
python/tests/: conftest.py  test_sdk.py  test_types.py
python/tests/accessor/: test_dropbox.py  test_gridfs.py  test_lancedb.py  test_mem0.py  test_mongodb.py  test_qdrant.py
python/tests/bridge/: test_sync.py
python/tests/cache/: test_context.py  test_manager.py  test_read_through.py
python/tests/cli/: conftest.py  test_cli_end_to_end.py  test_client.py  test_config.py  test_session_cli.py  test_settings.py
python/tests/commands/: test_config.py  test_spec.py  test_stderr_warnings.py
python/tests/concurrency/: test_limiter.py
python/tests/config/: test_loader.py
python/tests/context/: test_session_context.py
python/tests/core/: test_timeutil.py
python/tests/fixtures/: github_mock.py
python/tests/fuse/: test_fs.py  test_mount.py
python/tests/integration/: conftest.py  gdrive_mock.py  s3_mock.py  test_async_streaming.py  test_contract_regressions.py  test_cross_mount_matrix.py  test_glob_resolution.py  test_lazy_streaming.py  test_notion_e2e.py  test_pipeline.py  test_s3_complex.py
python/tests/io/: test_async_line_iterator.py  test_cachable_iterator.py  test_ioresult.py  test_stream.py  test_sync_bridge.py
python/tests/observe/: test_context.py  test_core_recording.py  test_disk_store.py  test_observer.py  test_store.py  test_workspace_observe.py
python/tests/ops/: test_file.py  test_inventory.py  test_open.py  test_ops.py  test_registry.py
python/tests/provision/: test_provision_types.py
python/tests/resource/: test_base.py  test_freshness.py  test_generic.py  test_loader.py  test_ram_stats.py  test_registry.py
python/tests/runtime/: test_base.py  test_table.py
python/tests/server/: conftest.py  test_app.py  test_daemon_config.py  test_host_validation.py  test_paths.py  test_sessions_router.py  test_workspaces_router.py
python/tests/shell/: conftest.py  test_arith.py  test_arrays.py  test_background_jobs.py  test_brace_expansion.py  test_break_continue.py  test_declare.py  test_exit_builtin.py  test_helpers.py  test_ifs_read.py  test_node_kind.py  test_param_expansion.py  test_parse.py  test_quoting_coverage.py  test_readonly.py  test_select.py  test_set_e.py  test_set_options.py  test_special_pid_vars.py  test_xtrace.py
python/tests/utils/: test_errors.py  test_fingerprint.py  test_fnmatch.py  test_glob_walk.py  test_ids.py  test_key_prefix.py  test_mode.py  test_path.py  test_stream.py
python/tests/watch/: test_attach.py  test_delta.py  test_enable_watch.py  test_watcher.py
python/tests/workspace/: s3_fake.py  test_cache_mount.py  test_cat_streaming.py  test_command_safeguard.py  test_command_timeout.py  test_cross_mount_errors.py  test_cwd_integration.py  test_default_mount_cache_dedup.py  test_dify_resource.py  test_execute_options.py  test_expand.py  test_find_action_dispatch.py  test_fingerprint_spike.py  test_fuse.py  test_fuse_manager.py  test_fuse_registry.py  test_help_man_integration.py  test_history.py  test_history_view.py  test_index_integration.py  test_index_writethrough.py  test_io_key_prefix.py  test_mount_root_protection.py  test_partial_read_errors.py  test_pipeline_budget.py  test_provider_integration.py  test_reconcile.py  test_runtime_binding.py  test_session_capability.py  test_snapshot.py  test_snapshot_interop.py  test_symlinks.py  test_workspace.py
(+3661 files in other folders)
