[project]
name = "mirage-ai"
version = "0.0.3"
description = "A unified virtual filesystem for AI agents. Mount S3, Google Drive, Slack, Gmail, GitHub, Linear, Notion, Postgres, MongoDB, SSH, and more behind one filesystem so agents read, write, and pipe across services with familiar shell commands."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Zecheng Zhang", email = "zecheng@strukto.ai" },
]
keywords = [
    "ai-agents",
    "filesystem",
    "vfs",
    "fuse",
    "s3",
    "google-drive",
    "slack",
    "agent-tools",
    "shell",
    "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.14.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.27",
    "orjson>=3.11",
    "pyyaml>=6.0.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-bash>=0.25.1",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.41.0",
    "jq>=1.11.0",
    "pyjwt[crypto]>=2.13.0",
    "dulwich>=1.2.5",
]

[project.urls]
Homepage = "https://www.strukto.ai/"
Repository = "https://github.com/strukto-ai/mirage"
Documentation = "https://docs.mirage.strukto.ai"
Issues = "https://github.com/strukto-ai/mirage/issues"

[project.scripts]
mirage = "mirage.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mirage*"]

[project.optional-dependencies]
# --- python runtime (sandboxed python3 default) ---
monty    = ["pydantic-monty>=0.0.18"]
wasi     = ["wasmtime>=46"]
quickjs  = ["wasmtime>=46"]

# --- storage / object stores ---
s3       = ["aioboto3>=13.0"]
r2       = ["aioboto3>=13.0"]
gcs      = ["aioboto3>=13.0"]
oci      = ["aioboto3>=13.0"]
databricks = ["databricks-sdk>=0.72.0"]

# --- network / remote ---
ssh      = ["asyncssh>=2.23.0"]
nextcloud = ["opendal>=0.47.1"]

# --- huggingface ---
hf       = ["opendal>=0.47.1"]

# --- mount ---
fuse     = ["mfusepy>=1.0.0"]

# --- mongodb ---
mongodb  = ["pymongo>=4.9"]

# --- postgres ---
postgres = ["asyncpg>=0.30.0"]

# --- redis ---
redis    = ["redis[hiredis]>=5.0"]

# --- mail ---
email    = ["aioimaplib>=2.0.1", "aiosmtplib>=5.1.0"]

# --- data ---
parquet  = ["pandas>=3.0.1", "pyarrow>=15.0"]
hdf5     = ["h5py>=3.16.0", "tables>=3.11.1", "pandas>=3.0.1"]
pdf      = ["pypdfium2>=5.7.0", "pillow>=12.2.0"]

# --- observability ---
langfuse = ["langfuse>=4.2.0"]

# --- chroma ---
# thin HTTP-only client; the accessor uses AsyncHttpClient exclusively
chroma   = ["chromadb-client>=1.0.0"]

# --- qdrant ---
qdrant   = ["qdrant-client[fastembed]>=1.18.0"]

# --- anthropic ---
anthropic   = ["anthropic>=0.88"]

# --- openai ---
openai      = ["openai>=2.30.0", "openai-agents>=0.14.7"]

# --- pydantic-ai ---
pydantic-ai = [
    "pydantic-ai-slim>=1.56",
    "pydantic-ai-backend>=0.1.0",
    "mirage-ai[pdf]",
]

# --- deepagents ---
deepagents  = ["deepagents>=0.4.12", "mirage-ai[pdf]"]

# --- openhands ---
openhands   = [
    "openhands-sdk>=1.18.0; python_version >= '3.12'",
    "openhands-tools>=1.18.0; python_version >= '3.12'",
]

# --- agno ---
agno        = ["agno>=2.4.0"]

# --- claude-agent-sdk ---
claude-agent-sdk = ["claude-agent-sdk>=0.1.0"]

# --- camel ---
camel       = ["camel-ai>=0.2.40,<0.3", "markitdown>=0.1.5"]

# --- sandboxes ---
daytona     = ["daytona>=0.176.0"]

# --- meta: install everything ---
all = [
    "mirage-ai[s3]",
    "mirage-ai[r2]",
    "mirage-ai[gcs]",
    "mirage-ai[oci]",
    "mirage-ai[databricks]",
    "mirage-ai[ssh]",
    "mirage-ai[nextcloud]",
    "mirage-ai[hf]",
    "mirage-ai[fuse]",
    "mirage-ai[mongodb]",
    "mirage-ai[postgres]",
    "mirage-ai[redis]",
    "mirage-ai[email]",
    "mirage-ai[parquet]",
    "mirage-ai[hdf5]",
    "mirage-ai[pdf]",
    "mirage-ai[langfuse]",
    "mirage-ai[chroma]",
    "mirage-ai[qdrant]",
    "mirage-ai[anthropic]",
    "mirage-ai[openai]",
    "mirage-ai[pydantic-ai]",
    "mirage-ai[deepagents]",
    "mirage-ai[openhands]",
    "mirage-ai[agno]",
    "mirage-ai[claude-agent-sdk]",
    "mirage-ai[daytona]",
]
lancedb = [
    "lancedb>=0.33.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "camel" },
        { extra = "openai" },
    ],
    [
        { extra = "camel" },
        { extra = "openhands" },
    ],
    [
        { extra = "camel" },
        { extra = "pydantic-ai" },
    ],
    [
        { extra = "camel" },
        { extra = "all" },
    ],
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.6",
    "python-dotenv>=1.2.2",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "moto[s3,server]>=5.1.22",
    "pre-commit",
    "pytest",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
    "mypy>=2.3.0",
]

[tool.flake8]
exclude = ["mirage/commands/remote/grpc/proto/command_pb2.py", "mirage/commands/remote/grpc/proto/command_pb2_grpc.py"]
per-file-ignores = [
    "python/mirage/resource/*/prompt.py:E501",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mirage --cov-report=term-missing -q --import-mode=importlib"
markers = [
    "network: tests that require network access",
    "no_host_override: skip the tests/server/conftest autouse MIRAGE_ALLOWED_HOSTS=* override",
    "no_auth_override: skip the tests/server/conftest autouse MIRAGE_AUTH_MODE=local-with-no-token override",
]

[tool.mypy]
python_version = "3.12"
packages = ["mirage"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true







# Ratchet baseline: modules with pre-existing mypy errors. Shrink this
# list, never grow it: when a module is cleaned, delete its entry so
# regressions in it fail CI. New modules must not be added here.
[[tool.mypy.overrides]]
module = [
    "mirage.accessor.databricks_volume",
    "mirage.accessor.mongodb",
    "mirage.agents.agno.toolkit",
    "mirage.agents.claude_agent_sdk.server",
    "mirage.agents.langchain._convert",
    "mirage.agents.langchain.backend",
    "mirage.agents.openai_agents.runner",
    "mirage.agents.openai_agents.sandbox",
    "mirage.agents.openai_agents.shell",
    "mirage.agents.pydantic_ai._convert",
    "mirage.agents.pydantic_ai.backend",
    "mirage.cache.file.io",
    "mirage.cache.index.redis",
    "mirage.commands",
    "mirage.commands.builtin.discord.grep",
    "mirage.commands.builtin.email.email_triage",
    "mirage.commands.builtin.general.bc",
    "mirage.commands.builtin.general.wget",
    "mirage.commands.builtin.generic.base64_cmd",
    "mirage.commands.builtin.generic.cmp",
    "mirage.commands.builtin.generic.column",
    "mirage.commands.builtin.generic.comm",
    "mirage.commands.builtin.generic.cp",
    "mirage.commands.builtin.generic.crossmount.relay.cp",
    "mirage.commands.builtin.generic.crossmount.relay.mv",
    "mirage.commands.builtin.generic.csplit",
    "mirage.commands.builtin.generic.diff",
    "mirage.commands.builtin.generic.find",
    "mirage.commands.builtin.generic.grep",
    "mirage.commands.builtin.generic.gunzip",
    "mirage.commands.builtin.generic.gzip",
    "mirage.commands.builtin.generic.iconv",
    "mirage.commands.builtin.generic.join",
    "mirage.commands.builtin.generic.look",
    "mirage.commands.builtin.generic.ls",
    "mirage.commands.builtin.generic.mv",
    "mirage.commands.builtin.generic.nl",
    "mirage.commands.builtin.generic.patch",
    "mirage.commands.builtin.generic.realpath",
    "mirage.commands.builtin.generic.rg",
    "mirage.commands.builtin.generic.rm_command",
    "mirage.commands.builtin.generic.sed",
    "mirage.commands.builtin.generic.sha256sum",
    "mirage.commands.builtin.generic.sort",
    "mirage.commands.builtin.generic.split",
    "mirage.commands.builtin.generic.stat",
    "mirage.commands.builtin.generic.tar",
    "mirage.commands.builtin.generic.tsort",
    "mirage.commands.builtin.generic.uniq",
    "mirage.commands.builtin.generic.unzip",
    "mirage.commands.builtin.generic.xxd",
    "mirage.commands.builtin.generic.zgrep",
    "mirage.commands.builtin.generic_bind.builders.awk",
    "mirage.commands.builtin.generic_bind.builders.base64",
    "mirage.commands.builtin.generic_bind.builders.cmp",
    "mirage.commands.builtin.generic_bind.builders.column",
    "mirage.commands.builtin.generic_bind.builders.comm",
    "mirage.commands.builtin.generic_bind.builders.cp",
    "mirage.commands.builtin.generic_bind.builders.csplit",
    "mirage.commands.builtin.generic_bind.builders.cut",
    "mirage.commands.builtin.generic_bind.builders.diff",
    "mirage.commands.builtin.generic_bind.builders.du",
    "mirage.commands.builtin.generic_bind.builders.expand",
    "mirage.commands.builtin.generic_bind.builders.file",
    "mirage.commands.builtin.generic_bind.builders.fmt",
    "mirage.commands.builtin.generic_bind.builders.fold",
    "mirage.commands.builtin.generic_bind.builders.gunzip",
    "mirage.commands.builtin.generic_bind.builders.gzip",
    "mirage.commands.builtin.generic_bind.builders.iconv",
    "mirage.commands.builtin.generic_bind.builders.join",
    "mirage.commands.builtin.generic_bind.builders.jq",
    "mirage.commands.builtin.generic_bind.builders.ln",
    "mirage.commands.builtin.generic_bind.builders.look",
    "mirage.commands.builtin.generic_bind.builders.md5",
    "mirage.commands.builtin.generic_bind.builders.mkdir",
    "mirage.commands.builtin.generic_bind.builders.mktemp",
    "mirage.commands.builtin.generic_bind.builders.mv",
    "mirage.commands.builtin.generic_bind.builders.nl",
    "mirage.commands.builtin.generic_bind.builders.paste",
    "mirage.commands.builtin.generic_bind.builders.patch",
    "mirage.commands.builtin.generic_bind.builders.realpath",
    "mirage.commands.builtin.generic_bind.builders.rev",
    "mirage.commands.builtin.generic_bind.builders.rm",
    "mirage.commands.builtin.generic_bind.builders.sed",
    "mirage.commands.builtin.generic_bind.builders.sha256sum",
    "mirage.commands.builtin.generic_bind.builders.shuf",
    "mirage.commands.builtin.generic_bind.builders.sort",
    "mirage.commands.builtin.generic_bind.builders.split",
    "mirage.commands.builtin.generic_bind.builders.strings",
    "mirage.commands.builtin.generic_bind.builders.tac",
    "mirage.commands.builtin.generic_bind.builders.tar",
    "mirage.commands.builtin.generic_bind.builders.tee",
    "mirage.commands.builtin.generic_bind.builders.touch",
    "mirage.commands.builtin.generic_bind.builders.tr",
    "mirage.commands.builtin.generic_bind.builders.tsort",
    "mirage.commands.builtin.generic_bind.builders.unexpand",
    "mirage.commands.builtin.generic_bind.builders.uniq",
    "mirage.commands.builtin.generic_bind.builders.unzip",
    "mirage.commands.builtin.generic_bind.builders.xxd",
    "mirage.commands.builtin.generic_bind.builders.zcat",
    "mirage.commands.builtin.generic_bind.builders.zgrep",
    "mirage.commands.builtin.generic_bind.builders.zip_cmd",
    "mirage.commands.builtin.generic_bind.factory",
    "mirage.commands.builtin.github.du",
    "mirage.commands.builtin.github.narrow",
    "mirage.commands.builtin.gmail.gws_gmail_triage",
    "mirage.commands.builtin.history.cat",
    "mirage.commands.builtin.linear.linear_issue_add_label",
    "mirage.commands.builtin.linear.linear_issue_assign",
    "mirage.commands.builtin.linear.linear_issue_comment_add",
    "mirage.commands.builtin.linear.linear_issue_comment_update",
    "mirage.commands.builtin.linear.linear_issue_create",
    "mirage.commands.builtin.linear.linear_issue_set_priority",
    "mirage.commands.builtin.linear.linear_issue_set_project",
    "mirage.commands.builtin.linear.linear_issue_transition",
    "mirage.commands.builtin.linear.linear_issue_update",
    "mirage.commands.builtin.mongodb.grep",
    "mirage.commands.builtin.mongodb.rg",
    "mirage.commands.builtin.mongodb.wc",
    "mirage.commands.builtin.postgres.grep",
    "mirage.commands.builtin.postgres.rg",
    "mirage.commands.builtin.postgres.tail",
    "mirage.commands.builtin.postgres.wc",
    "mirage.commands.builtin.s3.mkdir",
    "mirage.commands.builtin.s3.rm",
    "mirage.commands.builtin.s3.touch",
    "mirage.commands.builtin.trello.trello_card_comment_add",
    "mirage.commands.builtin.trello.trello_card_comment_update",
    "mirage.commands.builtin.trello.trello_card_create",
    "mirage.commands.builtin.trello.trello_card_update",
    "mirage.commands.builtin.utils.copy",
    "mirage.commands.builtin.utils.safeguard",
    "mirage.commands.config",
    "mirage.core.databricks_volume.readdir",
    "mirage.core.discord.readdir",
    "mirage.core.disk.append",
    "mirage.core.disk.copy",
    "mirage.core.disk.create",
    "mirage.core.disk.du",
    "mirage.core.disk.exists",
    "mirage.core.disk.find",
    "mirage.core.disk.mkdir",
    "mirage.core.disk.read",
    "mirage.core.disk.readdir",
    "mirage.core.disk.rename",
    "mirage.core.disk.rm",
    "mirage.core.disk.rmdir",
    "mirage.core.disk.stat",
    "mirage.core.disk.stream",
    "mirage.core.disk.truncate",
    "mirage.core.disk.unlink",
    "mirage.core.disk.write",
    "mirage.core.email.readdir",
    "mirage.core.gdocs.readdir",
    "mirage.core.gdrive.readdir",
    "mirage.core.gdrive.stream",
    "mirage.core.github._client",
    "mirage.core.github.find",
    "mirage.core.github.read",
    "mirage.core.github.readdir",
    "mirage.core.github.repo",
    "mirage.core.github.search",
    "mirage.core.github.stat",
    "mirage.core.github.tree",
    "mirage.core.github_ci.annotations",
    "mirage.core.github_ci.artifacts",
    "mirage.core.github_ci.readdir",
    "mirage.core.github_ci.runs",
    "mirage.core.github_ci.workflows",
    "mirage.core.gmail.readdir",
    "mirage.core.gsheets.readdir",
    "mirage.core.gslides.readdir",
    "mirage.core.lancedb.readdir",
    "mirage.core.langfuse.readdir",
    "mirage.core.linear.read",
    "mirage.core.linear.readdir",
    "mirage.core.mongodb._client",
    "mirage.core.mongodb._schema_json",
    "mirage.core.mongodb.read",
    "mirage.core.mongodb.readdir",
    "mirage.core.mongodb.stat",
    "mirage.core.mongodb.stream",
    "mirage.core.msgraph._client",
    "mirage.core.notion.read",
    "mirage.core.notion.readdir",
    "mirage.core.notion.stat",
    "mirage.core.onedrive._client",
    "mirage.core.postgres.read",
    "mirage.core.postgres.readdir",
    "mirage.core.postgres.stat",
    "mirage.core.qdrant.readdir",
    "mirage.core.ram.append",
    "mirage.core.ram.copy",
    "mirage.core.ram.create",
    "mirage.core.ram.du",
    "mirage.core.ram.exists",
    "mirage.core.ram.find",
    "mirage.core.ram.mkdir",
    "mirage.core.ram.mkdir_p",
    "mirage.core.ram.read",
    "mirage.core.ram.rename",
    "mirage.core.ram.rm",
    "mirage.core.ram.rmdir",
    "mirage.core.ram.stat",
    "mirage.core.ram.stream",
    "mirage.core.ram.truncate",
    "mirage.core.ram.unlink",
    "mirage.core.ram.write",
    "mirage.core.redis.append",
    "mirage.core.redis.copy",
    "mirage.core.redis.create",
    "mirage.core.redis.du",
    "mirage.core.redis.exists",
    "mirage.core.redis.find",
    "mirage.core.redis.mkdir",
    "mirage.core.redis.mkdir_p",
    "mirage.core.redis.read",
    "mirage.core.redis.readdir",
    "mirage.core.redis.rename",
    "mirage.core.redis.rm",
    "mirage.core.redis.rmdir",
    "mirage.core.redis.stat",
    "mirage.core.redis.truncate",
    "mirage.core.redis.unlink",
    "mirage.core.redis.write",
    "mirage.core.s3.copy",
    "mirage.core.s3.create",
    "mirage.core.s3.du",
    "mirage.core.s3.find",
    "mirage.core.s3.mkdir",
    "mirage.core.s3.read",
    "mirage.core.s3.readdir",
    "mirage.core.s3.rename",
    "mirage.core.s3.rm",
    "mirage.core.s3.rmdir",
    "mirage.core.s3.stat",
    "mirage.core.s3.stream",
    "mirage.core.s3.truncate",
    "mirage.core.s3.unlink",
    "mirage.core.s3.write",
    "mirage.core.sharepoint._resolver",
    "mirage.core.slack.readdir",
    "mirage.core.ssh._client",
    "mirage.core.ssh.copy",
    "mirage.core.ssh.du",
    "mirage.core.ssh.find",
    "mirage.core.ssh.read",
    "mirage.core.ssh.readdir",
    "mirage.core.ssh.rename",
    "mirage.core.ssh.rm",
    "mirage.core.ssh.stat",
    "mirage.core.ssh.stream",
    "mirage.core.ssh.write",
    "mirage.core.trello._client",
    "mirage.core.trello.read",
    "mirage.core.trello.readdir",
    "mirage.fuse.fs",
    "mirage.fuse.mount",
    "mirage.observe.redis_store",
    "mirage.ops.file",
    "mirage.ops.ops",
    "mirage.ops.os_patch",
    "mirage.ops.registry",
    "mirage.provision.types",
    "mirage.resource.chroma.chroma",
    "mirage.resource.databricks_volume.databricks_volume",
    "mirage.resource.dev.dev",
    "mirage.resource.dify.dify",
    "mirage.resource.discord.discord",
    "mirage.resource.disk.disk",
    "mirage.resource.email.email",
    "mirage.resource.gdocs.gdocs",
    "mirage.resource.gdrive.gdrive",
    "mirage.resource.github.github",
    "mirage.resource.github_ci.github_ci",
    "mirage.resource.gmail.gmail",
    "mirage.resource.gsheets.gsheets",
    "mirage.resource.gslides.gslides",
    "mirage.resource.hf_buckets.hf_buckets",
    "mirage.resource.hf_datasets.hf_datasets",
    "mirage.resource.hf_models.hf_models",
    "mirage.resource.hf_spaces.hf_spaces",
    "mirage.resource.lancedb.lancedb",
    "mirage.resource.langfuse.langfuse",
    "mirage.resource.linear.linear",
    "mirage.resource.mongodb.mongodb",
    "mirage.resource.nextcloud.nextcloud",
    "mirage.resource.notion.notion",
    "mirage.resource.onedrive.onedrive",
    "mirage.resource.postgres.postgres",
    "mirage.resource.qdrant.qdrant",
    "mirage.resource.ram.ram",
    "mirage.resource.redis.redis",
    "mirage.resource.redis.store",
    "mirage.resource.s3.s3",
    "mirage.resource.sharepoint.sharepoint",
    "mirage.resource.slack.slack",
    "mirage.resource.ssh.ssh",
    "mirage.resource.trello.trello",
    "mirage.server.auth.middleware",
    "mirage.server.routers.versions",
    "mirage.server.version.store",
    "mirage.shell.arith",
    "mirage.shell.helpers",
    "mirage.types",
    "mirage.utils.glob_walk",
    "mirage.workspace.executor.builtins.vars",
    "mirage.workspace.executor.command",
    "mirage.workspace.executor.fanout",
    "mirage.workspace.executor.pipes",
    "mirage.workspace.executor.redirect",
    "mirage.workspace.expand.globs",
    "mirage.workspace.mount.mount",
    "mirage.workspace.mount.registry",
    "mirage.workspace.node.command_dispatch",
    "mirage.workspace.node.execute_node",
    "mirage.workspace.node.provision_node",
    "mirage.workspace.node.run_tree",
    "mirage.workspace.runner",
    "mirage.workspace.session.session",
    "mirage.workspace.snapshot.state",
    "mirage.workspace.snapshot.tar_io",
    "mirage.workspace.workspace",
]
ignore_errors = true
